Explorer: Fix layout issues with breadcrumbs on small screens

--- a/src/styles/components/explorer/_breadcrumbs.scss
+++ b/src/styles/components/explorer/_breadcrumbs.scss
@@ -5,6 +5,7 @@
   list-style: none;
   background: $gray;
   color: $black;
+  overflow: hidden;
 
   li {
     display: inline;
